--- a/app/public/home.html
+++ b/app/public/home.html
@@ -33,7 +33,7 @@
 
     <footer class="footer">
       <div class="container">
-            <p class="bold"><a href="/api/friends">API Friends Link</a> |
+            <p class="bold"><a href="/api/friends">Friends Link</a> |
             
       </div>
     </footer>
