--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,7 +10,9 @@
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <title>Care Bear Survey</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+    <title>Care Bear Finder</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +24,7 @@
             <br>
 
             <div class="text-center">
-                <a href="/home"></a><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-home"></span>Home</button></a>
+                <a href="/"></a><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-home"></span>Home</button></a>
             </div>
         </div>
         <div class="row">
@@ -49,10 +51,10 @@
                         <h3><strong>Survey Questions</strong></h3>
                         <hr>
 
-                        <h3>I am someone who, is outgoing and socialble.</h3>
+                        <h3>I am someone who, is outgoing and sociable.</h3>
                         <select class="chosen-select" id="q1">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -60,10 +62,10 @@
                         </select>
 
 
-                        <h3>I am someone who, is compassinate and has a soft heart.</h3>
+                        <h3>I am someone who, is compassionate and has a soft heart.</h3>
                         <select class="chosen-select" id="q2">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -73,8 +75,8 @@
 
                         <h3>I am someone who, tends to be organized.</h3>
                         <select class="chosen-select" id="q3">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -84,8 +86,8 @@
 
                         <h3>I am someone who, tends to be lazy.</h3>
                         <select class="chosen-select" id="q4">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -95,8 +97,8 @@
 
                         <h3>I am someone who, is relaxed and handles stress well.</h3>
                         <select class="chosen-select" id="q5">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -105,8 +107,8 @@
 
                         <h3>I am someone who,is moody, and has mood swings.</h3>
                         <select class="chosen-select" id="q6">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -115,8 +117,8 @@
 
                         <h3>I am someone who, tends to be quiet.</h3>
                         <select class="chosen-select" id="q7">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -125,8 +127,8 @@
 
                         <h3>I am someone who, is fascinated by art, music, or literature.</h3>
                         <select class="chosen-select" id="q8">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -135,8 +137,8 @@
 
                         <h3>I am someone who, is less active than other people.</h3>
                         <select class="chosen-select" id="q9">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -145,8 +147,8 @@
 
                         <h3>I am someone who, has a forgiving nature.</h3>
                         <select class="chosen-select" id="q10">
-                            <option value=""></option>
-                            <option selected="selected" value="1">1 (Strongly Disagree)</option>
+                            <option selected="selected" value="">--Choose Answer--</option>
+                            <option value="1">1 (Strongly Disagree)</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -164,37 +166,137 @@
 
             </div>
         </div>
+
+         <!-- Modal -->
+  <div id="results-modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title"><strong>Best Match</strong></h2>
+        </div>
+        <div class="modal-body">
+          <h2 id="match-name"></h2>
+          <img id="match-img" src="https://i.pinimg.com/originals/e2/b6/f9/e2b6f9e946907cb08f85d3bfe6639fe5.jpg" alt="">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
         <!-- jquery -->
         <script type="text/javascript">
-         $("#submit").on("click", function(){
-    event.preventDefault();
+//          $("#submit").on("click", function(){
+//     event.preventDefault();
   
-      if( ($('#name').val().trim() !== "") && ($('#photo').val().trim() !== "") ) {
-          var userData = {
-              name: $("#name").val(),
-              photo: $("#photo").val(),
-              scores: [$("#q1").val(), 
-                       $("#q2").val(), 
-                       $("#q3").val(), 
-                       $("#q4").val(), 
-                       $("#q5").val(), 
-                       $("#q6").val(), 
-                       $("#q7").val(), 
-                       $("#q8").val(), 
-                       $("#q9").val(), 
-                       $("#q10").val(), ]
-          };
+//       if( ($('#name').val().trim() !== "") && ($('#photo').val().trim() !== "") ) {
+//           var userData = {
+//               name: $("#name").val(),
+//               photo: $("#photo").val(),
+//               scores: [$("#q1").val(), 
+//                        $("#q2").val(), 
+//                        $("#q3").val(), 
+//                        $("#q4").val(), 
+//                        $("#q5").val(), 
+//                        $("#q6").val(), 
+//                        $("#q7").val(), 
+//                        $("#q8").val(), 
+//                        $("#q9").val(), 
+//                        $("#q10").val(), ]
+//           };
         
-    $.post("/api/friends", userData, function(data) {
-      $("#match-name").text(data.name);
-      $("#match-img").attr("src", data.photo);
-      $("#results-modal").modal("toggle");
-  })
- } 
-        else  {
-      alert("Fill out required fields")
-  }
+//     $.post("/api/friends", userData, function(data) {
+//       $("#match-name").text(data.name);
+//       $("#match-img").attr("src", data.photo);
+//       $("#results-modal").modal("toggle");
+//   })
+//  } 
+//         else  {
+//       alert("Fill out required fields")
+//   }
 
+//     });
+
+    var config = {
+      ".chosen-select": {},
+      ".chosen-select-deselect": {
+        allow_single_deselect: true
+      },
+      ".chosen-select-no-single": {
+        disable_search_threshold: 10
+      },
+      ".chosen-select-no-results": {
+        no_results_text: "Oops, nothing found!"
+      },
+      ".chosen-select-width": {
+        width: "95%"
+      }
+    };
+
+    for (var selector in config) {
+      $(selector).chosen(config[selector]);
+    }
+
+    // Capture the form inputs
+    $("#submit").on("click", function(event) {
+      event.preventDefault();
+
+      // Form validation
+      function validateForm() {
+        var isValid = true;
+        $(".form-control").each(function() {
+          if ($(this).val() === "") {
+            isValid = false;
+          }
+        });
+
+        $(".chosen-select").each(function() {
+
+          if ($(this).val() === "") {
+            isValid = false;
+          }
+        });
+        return isValid;
+      }
+
+      // If all required fields are filled
+      if (validateForm()) {
+        // Create an object for the user"s data
+        var userData = {
+          name: $("#name").val(),
+          photo: $("#photo").val(),
+          scores: [
+            $("#q1").val(),
+            $("#q2").val(),
+            $("#q3").val(),
+            $("#q4").val(),
+            $("#q5").val(),
+            $("#q6").val(),
+            $("#q7").val(),
+            $("#q8").val(),
+            $("#q9").val(),
+            $("#q10").val()
+          ]
+        };
+
+        // AJAX post the data to the friends API.
+        $.post("/api/friends", userData, function(data) {
+
+          // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+          $("#match-name").text(data.name);
+          $("#match-img").attr("src", data.photo);
+
+          // Show the modal with the best match
+          $("#results-modal").modal("toggle");
+
+        });
+      } else {
+        alert("Please fill out all fields before submitting!");
+      }
     });
 
         </script>
